# Deep_Learning.AI_Agentic_AI

./: README.md  pyproject.toml
module2_workbooks/: C1M2_Assignment-Copy1.ipynb
module2_workbooks/chart_generation/: chart_generation.ipynb
module2_workbooks/improving_sql_generation/: MD_UGL_2.ipynb  products.db
notebooks/: agentic_ai_practice.ipynb
